--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 		    <artifactId>poi-ooxml</artifactId>
 		<version>4.1.2</version>   
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
