database connection done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+logging.level.org.springframework=INFO
+
+################### DataSource Configuration ##########################
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/lifeinsurance_database
+spring.datasource.username=oldmutual
+spring.datasource.password=Lifeassured@1
+
+################### Hibernate Configuration ##########################
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
